WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216275
REGRESSION(
r266634
): [macOS release] 4 layout tests became flaky failures
https://bugs.webkit.org/show_bug.cgi?id=216275
Summary
REGRESSION(r266634): [macOS release] 4 layout tests became flaky failures
Ryan Haddad
Reported
2020-09-08 10:17:19 PDT
The following layout tests have become flaky failures on macOS release bots: compositing/tiling/tiled-mask-inwindow.html fast/events/page-visibility-iframe-move-test.html pageoverlay/overlay-remove-reinsert-view.html tiled-drawing/tiled-backing-in-window.html
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&suite=layout-tests&suite=layout-tests&test=compositing%2Ftiling%2Ftiled-mask-inwindow.html&test=fast%2Fevents%2Fpage-visibility-iframe-move-test.html&test=pageoverlay%2Foverlay-remove-reinsert-view.html&test=tiled-drawing%2Ftiled-backing-in-window.html
Attachments
Patch
(7.04 KB, patch)
2020-09-08 23:12 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(12.32 KB, patch)
2020-09-09 19:42 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch
(12.19 KB, patch)
2020-09-09 23:04 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2020-09-08 10:18:38 PDT
I was able to reproduce one of the failures with the following on
r266634
: run-webkit-tests compositing/tiling/tiled-mask-inwindow.html --iterations 100 --exit-after-n-failures 1 I could not reproduce with
r266629
.
Radar WebKit Bug Importer
Comment 2
2020-09-08 10:18:57 PDT
<
rdar://problem/68515242
>
Ryan Haddad
Comment 3
2020-09-08 10:20:04 PDT
Not sure if this is fixed by the patch in
https://bugs.webkit.org/show_bug.cgi?id=216261
Sihui Liu
Comment 4
2020-09-08 23:12:53 PDT
Created
attachment 408312
[details]
Patch
Sihui Liu
Comment 5
2020-09-09 19:42:04 PDT
Created
attachment 408403
[details]
Patch
Darin Adler
Comment 6
2020-09-09 20:33:18 PDT
Comment on
attachment 408403
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=408403&action=review
> Source/WebKit/ChangeLog:10 > + transation is committed in UI process. To make sure web process picks up the changes, we need to invoke the
typo: "transition"
> Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:357 > +- (void)_doAfterActivityStateUpdate:(void (^)(void))completionHandler WK_API_AVAILABLE(macos(WK_MAC_TBA), ios(WK_IOS_TBA));
Why is this not in WKWebViewPrivateForTesting.h?
Darin Adler
Comment 7
2020-09-09 20:33:39 PDT
Comment on
attachment 408403
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=408403&action=review
> LayoutTests/fast/events/page-visibility-iframe-move-test.html:58 > + debug("VisibilityChanage event is received");
typo: "VisibilityChange"
Sihui Liu
Comment 8
2020-09-09 23:03:34 PDT
Comment on
attachment 408403
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=408403&action=review
>> Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivate.h:357 >> +- (void)_doAfterActivityStateUpdate:(void (^)(void))completionHandler WK_API_AVAILABLE(macos(WK_MAC_TBA), ios(WK_IOS_TBA)); > > Why is this not in WKWebViewPrivateForTesting.h?
ah, will move it to WKWebViewPrivateForTesting.h!
Sihui Liu
Comment 9
2020-09-09 23:04:40 PDT
Created
attachment 408415
[details]
Patch
Tim Horton
Comment 10
2020-09-10 10:28:26 PDT
Comment on
attachment 408415
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=408415&action=review
> Source/WebKit/UIProcess/API/Cocoa/WKWebViewPrivateForTesting.h:79 > +- (void)_doAfterActivityStateUpdate:(void (^)(void))completionHandler;
Nice!
EWS
Comment 11
2020-09-10 11:50:49 PDT
Committed
r266847
: <
https://trac.webkit.org/changeset/266847
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 408415
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug