Source/WebKit: REGRESSION(r266634): [macOS release] 4 layout tests became flaky failures https://bugs.webkit.org/show_bug.cgi?id=216275 <rdar://problem/68515242>

Reviewed by Tim Horton.

After r266634, activity state changes caused by adding/removing view will not be dispatched to web process until
transaction is committed in UI process. To make sure web process picks up the changes, we need to invoke the
callbacks after activity state changes are dispatched.

* UIProcess/API/Cocoa/WKWebViewPrivateForTesting.h:
* UIProcess/API/Cocoa/WKWebViewTesting.mm:
(-[WKWebView _doAfterActivityStateUpdate:]):
* UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::addActivityStateUpdateCompletionHandler):
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::dispatchActivityStateChange):
* UIProcess/WebPageProxy.h:

Tools:
REGRESSION (r266634): [macOS release] 4 layout tests became flaky failures
https://bugs.webkit.org/show_bug.cgi?id=216275
<rdar://problem/68515242>

Reviewed by Tim Horton.

* WebKitTestRunner/cocoa/UIScriptControllerCocoa.mm:
(WTR::UIScriptControllerCocoa::removeViewFromWindow):
(WTR::UIScriptControllerCocoa::addViewToWindow):

LayoutTests:
REGRESSION (r266634): [macOS release] 4 layout tests became flaky failures
https://bugs.webkit.org/show_bug.cgi?id=216275
<rdar://problem/68515242>

Reviewed by Tim Horton.

Add more event handlers to make test more stable, and add extra logging for debugging.

* fast/events/page-visibility-iframe-move-test-expected.txt:
* fast/events/page-visibility-iframe-move-test.html:


Canonical link: https://commits.webkit.org/229204@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266847 268f45cc-cd09-0410-ab3c-d52691b4dbfc